Fix safelist tailwind

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "development": "mix",
     "watch": "mix watch",
     "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot",
+    "hot": "mix watch --hot --https",
     "prod": "mix --production",
     "production": "mix --production",
     "lint": "eslint --fix --ext .js,.vue resources/js"
