--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "query-builder-vue": "^1.2.0",
     "tinymotion": "^0.2.0",
     "vform": "^2.1.1",
+    "vt-notifications": "^0.4.1",
     "vue": "^2.6.14",
     "vue-chartjs": "^4.1.0",
     "vue-clickaway": "^2.2.2",
