--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-plugin-load-script": "^1.3.2",
     "vue-prism-editor": "^1.2.2",
     "vue-router": "^3.5.2",
+    "vue-signature-pad": "^2.0.5",
     "vue-tailwind": "^2.5.0",
     "vue2-editor": "^2.10.3",
     "vuedraggable": "^2.24.3",
