Add default s3 filesystem

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
+FILESYSTEM_DRIVER=s3
+FILESYSTEM_DISK=s3
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
