Fix JS middlewares ⚒️

--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
     "barryvdh/laravel-ide-helper": "^2.12",
     "fakerphp/faker": "^1.9.1",
     "laravel/dusk": "^6.8",
+    "laravel/sail": "^1.18",
     "mockery/mockery": "^1.4.2",
     "nunomaduro/collision": "^6.1",
     "pestphp/pest": "^1.15",
