--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue": "^2.6.14",
     "vue-chartjs": "^4.1.0",
     "vue-clickaway": "^2.2.2",
+    "vue-confetti": "^2.3.0",
     "vue-i18n": "^8.25.0",
     "vue-meta": "^2.4.0",
     "vue-notion": "^0.4.0",
