--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-sha256": "^0.9.0",
     "portal-vue": "^2.1.7",
     "prismjs": "^1.24.1",
+    "qrcode": "^1.5.1",
     "query-builder-vue": "^1.2.0",
     "tinymotion": "^0.2.0",
     "vform": "^2.1.1",
