--- a/vapor.yml
+++ b/vapor.yml
@@ -16,6 +16,7 @@ environments:
     build:
       - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
       - 'php artisan event:cache'
+      - 'php artisan disposable:update'
       - 'npm ci && npm run build && rm -rf node_modules'
     deploy:
       - 'php artisan migrate --force'
