Upgrade vapor runtime

--- a/vapor.yml
+++ b/vapor.yml
@@ -9,7 +9,7 @@ environments:
     memory: 1024
     cli-memory: 512
     cli-timeout: 900
-    runtime: 'php-8.1:al2'
+    runtime: 'php-8.2:al2-arm'
     storage: 'opnforms-prod'
     database: 'JuPersoDb'
     domain: 'opnform.com'
