--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "tinymotion": "^0.2.0",
     "vform": "^2.1.1",
     "vt-notifications": "^0.4.1",
-    "vue": "^2.6.14",
+    "vue": "^2.7.14",
     "vue-chartjs": "^4.1.0",
     "vue-clickaway": "^2.2.2",
+    "vue-codemirror": "^4.0.6",
     "vue-confetti": "^2.3.0",
     "vue-i18n": "^8.25.0",
     "vue-meta": "^2.4.0",
     "vue-notion": "^0.4.0",
     "vue-plugin-load-script": "^1.3.2",
-    "vue-prism-editor": "^1.2.2",
     "vue-router": "^3.5.2",
     "vue-signature-pad": "^2.0.5",
     "vue-tailwind": "^2.5.0",
