--- a/.env.example
+++ b/.env.example
@@ -56,7 +56,21 @@ JWT_SECRET=
 STRIPE_KEY=
 STRIPE_SECRET=
 
+STRIPE_PROD_DEFAULT_PRODUCT_ID=
+STRIPE_PROD_DEFAULT_PRICING_MONTHLY=
+STRIPE_PROD_DEFAULT_PRICING_YEARLY=
+
+STRIPE_TEST_DEFAULT_PRODUCT_ID=
+STRIPE_TEST_DEFAULT_PRICING_MONTHLY=
+STRIPE_TEST_DEFAULT_PRICING_YEARLY=
+
+H_CAPTCHA_SITE_KEY=
+H_CAPTCHA_SECRET=
+
 MUX_WORKSPACE_ID=
 MUX_API_TOKEN=
+
+ADMIN_EMAILS=
+TEMPLATE_EDITOR_EMAILS=
 
 OPEN_AI_API_KEY=
