--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-router": "^3.5.2",
     "vue-signature-pad": "^2.0.5",
     "vue-tailwind": "^2.5.0",
+    "vue-tel-input": "^5.14.0",
     "vue2-editor": "^2.10.3",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2",
