--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fuse.js": "^6.4.6",
     "js-cookie": "^2.2.1",
     "js-sha256": "^0.9.0",
+    "libphonenumber-js": "^1.10.44",
     "portal-vue": "^2.1.7",
     "prismjs": "^1.24.1",
     "qrcode": "^1.5.1",
