--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,12 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": "^8.2",
     "ext-json": "*",
     "aws/aws-sdk-php": "^3.183",
     "doctrine/dbal": "^3.4",
     "fruitcake/laravel-cors": "^2.0",
+    "giggsey/libphonenumber-for-php": "^8.13",
     "guzzlehttp/guzzle": "^7.0.1",
     "jhumanj/laravel-model-stats": "^0.4.0",
     "laravel/cashier": "^13.4",
