--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@hcaptcha/vue-hcaptcha": "^0.3.2",
+    "@hcaptcha/vue3-hcaptcha": "^0.3.2",
     "@sentry/integrations": "^7.53.1",
     "@sentry/tracing": "^6.11.0",
     "@sentry/vue": "^6.11.0",
@@ -18,30 +18,28 @@
     "js-cookie": "^2.2.1",
     "js-sha256": "^0.9.0",
     "libphonenumber-js": "^1.10.44",
-    "portal-vue": "^2.1.7",
     "prismjs": "^1.24.1",
     "qrcode": "^1.5.1",
     "query-builder-vue": "^1.2.0",
     "tinymotion": "^0.2.0",
     "vform": "^2.1.1",
-    "vt-notifications": "^0.4.1",
-    "vue": "^2.7.14",
+    "vue3-vt-notifications": "^1.0.0",
+    "vue": "^3.1.0",
+    "@vue/compat": "^3.1.0",
     "vue-chartjs": "^4.1.0",
-    "vue-clickaway": "^2.2.2",
+    "vue3-click-away": "^1.2.4",
     "vue-codemirror": "^4.0.6",
     "vue-confetti": "^2.3.0",
-    "vue-country-flag": "^2.3.2",
+    "vue-country-flag-next": "^2.3.2",
     "vue-i18n": "^8.25.0",
     "vue-meta": "^2.4.0",
-    "vue-notion": "^0.4.0",
+    "vue-notion": "^3.0.0-beta.1",
     "vue-plugin-load-script": "^1.3.2",
     "vue-router": "^3.5.2",
     "vue-signature-pad": "^2.0.5",
-    "vue-tailwind": "^2.5.0",
     "vue2-editor": "^2.10.3",
     "vuedraggable": "^2.24.3",
-    "vuex": "^3.6.2",
-    "vuex-router-sync": "^5.0.0"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -69,6 +67,6 @@
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.4",
     "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.6.14"
+    "@vue/compiler-sfc": "^3.1.0"
   }
 }
