--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@hcaptcha/vue3-hcaptcha": "^0.3.2",
+    "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@sentry/integrations": "^7.53.1",
     "@sentry/tracing": "^6.11.0",
     "@sentry/vue": "^6.11.0",
+    "@vue/compat": "^3.1.0",
+    "@vueuse/components": "^10.5.0",
+    "@vueuse/core": "^10.5.0",
     "axios": "^0.21.1",
     "chart.js": "^3.7.1",
     "clone-deep": "^4.0.1",
@@ -23,21 +26,18 @@
     "query-builder-vue": "^1.2.0",
     "tinymotion": "^0.2.0",
     "vform": "^2.1.1",
-    "vue3-vt-notifications": "^1.0.0",
-    "vue": "^3.1.0",
-    "@vue/compat": "^3.1.0",
+    "vue": "^3.2.13",
     "vue-chartjs": "^4.1.0",
-    "vue3-click-away": "^1.2.4",
     "vue-codemirror": "^4.0.6",
     "vue-confetti": "^2.3.0",
     "vue-country-flag-next": "^2.3.2",
     "vue-i18n": "^8.25.0",
     "vue-meta": "^2.4.0",
     "vue-notion": "^3.0.0-beta.1",
-    "vue-plugin-load-script": "^1.3.2",
-    "vue-router": "^3.5.2",
+    "vue-router": "^4.2.5",
     "vue-signature-pad": "^2.0.5",
     "vue2-editor": "^2.10.3",
+    "vue3-vt-notifications": "^1.0.0",
     "vuedraggable": "^2.24.3",
     "vuex": "^4.1.0"
   },
@@ -48,7 +48,7 @@
     "@babel/preset-env": "^7.15.0",
     "@sentry/vite-plugin": "^2.8.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@vitejs/plugin-vue2": "^2.2.0",
+    "@vitejs/plugin-vue": "^4.4.0",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
@@ -66,7 +66,6 @@
     "sass-loader": "^10.2.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.4",
-    "vue-loader": "^15.9.8",
-    "@vue/compiler-sfc": "^3.1.0"
+    "vue-loader": "^15.9.8"
   }
 }
