--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "vue-confetti": "^2.3.0",
     "vue-country-flag-next": "^2.3.2",
     "vue-i18n": "^8.25.0",
-    "vue-meta": "^2.4.0",
+    "vue-meta": "^3.0.0-alpha.2",
     "vue-notion": "^3.0.0-beta.1",
     "vue-router": "^4.2.5",
     "vue-signature-pad": "^2.0.5",
