--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
@@ -24,7 +25,7 @@
     "pinia": "^2.1.7",
     "prismjs": "^1.24.1",
     "qrcode": "^1.5.1",
-    "query-builder-vue-3": "^1.0.0",
+    "query-builder-vue-3": "^1.0.1",
     "tinymotion": "^0.2.0",
     "vform": "^2.1.1",
     "vue": "^3.2.13",
