--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@sentry/integrations": "^7.53.1",
     "@sentry/tracing": "^6.11.0",
     "@sentry/vue": "^6.11.0",
-    "@vue/compat": "^3.1.0",
+    "@vue/compat": "^3.3.9",
     "@vueuse/components": "^10.5.0",
     "@vueuse/core": "^10.5.0",
     "axios": "^0.21.1",
@@ -24,7 +25,7 @@
     "pinia": "^2.1.7",
     "prismjs": "^1.24.1",
     "qrcode": "^1.5.1",
-    "query-builder-vue": "^1.2.0",
+    "query-builder-vue-3": "^1.0.1",
     "tinymotion": "^0.2.0",
     "vform": "^2.1.1",
     "vue": "^3.2.13",
@@ -66,6 +67,6 @@
     "sass-loader": "^10.2.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.4",
-    "vue-loader": "^15.9.8"
+    "vue-loader": "^16.8.3"
   }
 }
