--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/compat": "^3.3.9",
     "@vueuse/components": "^10.5.0",
     "@vueuse/core": "^10.5.0",
+    "@vueuse/motion": "^2.0.0",
     "axios": "^0.21.1",
     "chart.js": "^4.4.0",
     "clone-deep": "^4.0.1",
