--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "chart.js": "^4.4.0",
     "clone-deep": "^4.0.1",
+    "crisp-sdk-web": "^1.0.21",
     "date-fns": "^2.28.0",
     "debounce": "^1.2.1",
     "fuse.js": "^6.4.6",
@@ -36,8 +37,8 @@
     "vue-country-flag-next": "^2.3.2",
     "vue-i18n": "^8.25.0",
     "vue-meta": "^3.0.0-alpha.2",
-    "vue-router": "^4.2.5",
     "vue-notion": "^3.0.0-beta.1",
+    "vue-router": "^4.2.5",
     "vue-signature-pad": "^3.0.2",
     "vue3-editor": "^0.1.1",
     "vue3-vt-notifications": "^1.0.0",
