--- a/client/package.json
+++ b/client/package.json
@@ -36,14 +36,13 @@
     "date-fns": "^2.28.0",
     "debounce": "^1.2.1",
     "fuse.js": "^6.4.6",
-    "js-cookie": "^2.2.1",
     "js-sha256": "^0.9.0",
     "libphonenumber-js": "^1.10.44",
+    "object-to-formdata": "^4.5.1",
     "prismjs": "^1.24.1",
     "qrcode": "^1.5.1",
     "query-builder-vue-3": "^1.0.1",
     "tinymotion": "^0.2.0",
-    "vform": "^2.1.1",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.2.0",
     "vue-codemirror": "^4.0.6",
