--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "js-sha256": "^0.9.0",
     "libphonenumber-js": "^1.10.44",
     "object-to-formdata": "^4.5.1",
+    "pinia": "^2.1.7",
     "prismjs": "^1.24.1",
     "qrcode": "^1.5.1",
     "query-builder-vue-3": "^1.0.1",
