--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.21.1",
     "chart.js": "^4.4.0",
     "clone-deep": "^4.0.1",
+    "crisp-sdk-web": "^1.0.21",
     "date-fns": "^2.28.0",
     "debounce": "^1.2.1",
     "fuse.js": "^6.4.6",
