--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^3.8.2",
     "nuxt-simple-sitemap": "^4.2.3",
     "postcss": "^8.4.32",
+    "sass": "^1.69.6",
     "tailwindcss": "^3.3.6",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
