--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@nuxtjs/sentry": "^8.0.6",
     "@pinia/nuxt": "^0.5.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vueuse/components": "^10.5.0",
     "@vueuse/core": "^10.5.0",
     "@vueuse/motion": "^2.0.0",
