--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
+    "@nuxt/image": "^1.1.0",
     "@nuxtjs/sentry": "^8.0.6",
     "@pinia/nuxt": "^0.5.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
