--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,12 @@ frontend:
         - npm ci
     build:
       commands:
+        - touch .env
+        - env | grep -e NUXT_LOG_LEVEL >> .env
+        - env | grep -e NEXT_PUBLIC_ >> .env
+        - env
+        - echo "env file created"
+        - cat .env
         - npm run build
   artifacts:
     baseDirectory: client/.amplify-hosting
