--- a/amplify.yml
+++ b/amplify.yml
@@ -9,7 +9,7 @@ frontend:
       commands:
         - touch .env
         - env | grep -e NUXT_LOG_LEVEL >> .env
-        - env | grep -e NEXT_PUBLIC_ >> .env
+        - env | grep -e NUXT_PUBLIC_ >> .env
         - npm run build
   artifacts:
     baseDirectory: client/.amplify-hosting
