--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@codemirror/lang-html": "^6.4.7",
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@nuxt/image": "^1.1.0",
     "@nuxtjs/sentry": "^8.0.6",
@@ -49,7 +50,7 @@
     "tinymotion": "^0.2.0",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.2.0",
-    "vue-codemirror": "^4.0.6",
+    "vue-codemirror": "^6.1.1",
     "vue-confetti": "^2.3.0",
     "vue-country-flag-next": "^2.3.2",
     "vue-notion": "^3.0.0-beta.1",
