--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -161,7 +161,7 @@ jobs:
       matrix:
         php: [ 8.2 ]
 
-    name: Triggers deploy through Laravel Vapor
+    name: Triggers Deployment (Vapor & Amplify)
 
     steps:
       - name: Checkout code
@@ -203,15 +203,12 @@ jobs:
       - name: Directory permissions
         run: chmod -R 777 storage bootstrap/cache
 
-      - name: Install npm dependencies
-        run: npm install --no-audit --no-progress --silent
+      - name: Trigger front-end deployment
+        run:  |
+          URL="${{ secrets.AMPLIFY_DEPLOY_URL }}"
+          curl -X POST -d {} "$URL" -H "Content-Type: application/json"
 
-      - name: Build client
-        run: npm run build
-        env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-
-      - name: Deploy to production
+      - name: Deploy back-end to production
         run: php vendor/bin/vapor deploy api-production --commit="${GITHUB_SHA}" --message="${GITHUB_REF}"
         env:
           VAPOR_API_TOKEN: ${{ secrets.VAPOR_API_TOKEN }}
