--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,9 @@
     "@codemirror/lang-html": "^6.4.7",
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@nuxt/image": "^1.1.0",
-    "@nuxtjs/sentry": "^8.0.6",
     "@pinia/nuxt": "^0.5.1",
+    "@sentry/vite-plugin": "^2.10.2",
+    "@sentry/vue": "^7.93.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vueuse/components": "^10.5.0",
     "@vueuse/core": "^10.5.0",
