Improve .env.example - Add codemirror dependency

--- a/client/.env.example
+++ b/client/.env.example
@@ -10,4 +10,4 @@ NUXT_PUBLIC_GOOGLE_ANALYTICS_CODE=
 NUXT_PUBLIC_H_CAPTCHA_SITE_KEY=
 NUXT_PUBLIC_PAID_PLANS_ENABLED=
 NUXT_PUBLIC_S3_ENABLED=
-NUXT_API_SECRET=
+NUXT_API_SECRET=secret
