Bypass sharp in docker hosted environment #295

--- a/client/.env.docker
+++ b/client/.env.docker
@@ -11,3 +11,4 @@ NUXT_PUBLIC_H_CAPTCHA_SITE_KEY=
 NUXT_PUBLIC_PAID_PLANS_ENABLED=
 NUXT_PUBLIC_S3_ENABLED=
 NUXT_API_SECRET=
+NUXT_PUBLIC_USE_NULL_IMAGE_PROVIDER=yes
