--- a/vapor.yml
+++ b/vapor.yml
@@ -24,6 +24,9 @@ environments:
             rate-limit: 1000
         timeout: 60
     api-staging:
+        octane: true
+        octane-database-session-persist: true
+        octane-database-session-ttl: 10
         memory: 1024
         cli-memory: 512
         cli-timeout: 900
