update env example

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,7 +1,7 @@
 NUXT_LOG_LEVEL=
 NUXT_PUBLIC_APP_URL=
 NUXT_PUBLIC_API_BASE=
-NUXT_PUBLIC_AI_ENABLED=
+NUXT_PUBLIC_AI_FEATURES_ENABLED=
 NUXT_PUBLIC_AMPLITUDE_CODE=
 NUXT_PUBLIC_CRISP_WEBSITE_ID=
 NUXT_PUBLIC_CUSTOM_DOMAINS_ENABLED=
