fix local files in docker
Response::make diesnt exist anymore and the nginx.conf didnt allow the needed paths

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -25,6 +25,16 @@ server {
               try_files $uri $uri/ /index.php$is_args$args;
          }
 
+         location /local/temp/ {
+              set $original_uri $uri;
+              try_files $uri $uri/ /index.php$is_args$args;
+         }
+
+         location /forms/assets/ {
+              set $original_uri $uri;
+              try_files $uri $uri/ /index.php$is_args$args;
+         }
+
          location ~ \.php$ {
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             fastcgi_pass unix:/var/run/php-fpm-opnform-site.sock;
