20334 implement desktop camera upload feature (#335)
* wip: camera upload

* Handle camera permissions

* remove console logs

* fix camera theme, hide on small  screen,

* video sizing on camera  upload

* camera feature minor fixes

* Package.json update

---------

Co-authored-by: Julien Nahum <julien@nahum.net>

--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
     "vue-notion": "^3.0.0-beta.1",
     "vue-signature-pad": "^3.0.2",
     "vue3-editor": "^0.1.1",
-    "vuedraggable": "next"
+    "vuedraggable": "next",
+    "webcam-easy": "^1.1.1"
   }
 }
