--- a/client/package.json
+++ b/client/package.json
@@ -10,24 +10,24 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "~1.0.0",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.9.1",
     "nuxt-gtag": "^1.1.2",
+    "nuxt-icon": "^0.6.10",
     "nuxt-simple-sitemap": "^4.2.3",
     "postcss": "^8.4.32",
     "sass": "^1.69.6",
-    "tailwindcss": "^3.3.6",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@codemirror/lang-html": "^6.4.7",
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
+    "@nuxt/ui": "^2.14.2",
     "@pinia/nuxt": "^0.5.1",
     "@sentry/vite-plugin": "^2.10.2",
     "@sentry/vue": "^7.93.0",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vueuse/components": "^10.5.0",
     "@vueuse/core": "^10.5.0",
     "@vueuse/motion": "^2.0.0",
@@ -38,11 +38,9 @@
     "codemirror": "^6.0.1",
     "crisp-sdk-web": "^1.0.21",
     "date-fns": "^2.28.0",
-    "debounce": "^1.2.1",
     "fuse.js": "^6.4.6",
     "js-sha256": "^0.10.0",
     "libphonenumber-js": "^1.10.44",
-    "lodash.throttle": "^4.1.1",
     "nuxt3-notifications": "^1.1.9",
     "object-to-formdata": "^4.5.1",
     "pinia": "^2.1.7",
@@ -55,6 +53,7 @@
     "vue-codemirror": "^6.1.1",
     "vue-confetti": "^2.3.0",
     "vue-country-flag-next": "^2.3.2",
+    "vue-json-pretty": "^2.4.0",
     "vue-notion": "^3.0.0-beta.1",
     "vue-signature-pad": "^3.0.2",
     "vue3-editor": "^0.1.1",
