--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "export NODE_TLS_REJECT_UNAUTHORIZED=0; nuxt dev --host=127.0.0.1",
+    "dev": "export NODE_TLS_REJECT_UNAUTHORIZED=0; nuxt dev",
     "generate": "export NODE_TLS_REJECT_UNAUTHORIZED=0; nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -24,8 +24,9 @@
   "dependencies": {
     "@codemirror/lang-html": "^6.4.7",
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
-    "@nuxt/ui": "^2.14.2",
+    "@nuxt/ui": "^2.15.0",
     "@pinia/nuxt": "^0.5.1",
+    "@popperjs/core": "^2.11.8",
     "@sentry/vite-plugin": "^2.10.2",
     "@sentry/vue": "^7.93.0",
     "@vueuse/components": "^10.5.0",
@@ -37,7 +38,7 @@
     "clone-deep": "^4.0.1",
     "codemirror": "^6.0.1",
     "crisp-sdk-web": "^1.0.21",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.30.0",
     "fuse.js": "^6.4.6",
     "js-sha256": "^0.10.0",
     "libphonenumber-js": "^1.10.44",
@@ -48,6 +49,7 @@
     "qrcode": "^1.5.1",
     "query-builder-vue-3": "^1.0.1",
     "tinymotion": "^0.2.0",
+    "v-calendar": "^3.1.2",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.2.0",
     "vue-codemirror": "^6.1.1",
