--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -2,18 +2,17 @@
 nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
+user=root
 
 [program:nginx]
 command=/usr/sbin/nginx
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:php-fpm]
 command=/usr/local/bin/php-fpm-wrapper.sh
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
@@ -21,7 +20,6 @@ redirect_stderr=true
 process_name=%(program_name)s_%(process_num)02d
 command=/usr/local/bin/artisan queue:work
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 numprocs=5
@@ -29,21 +27,17 @@ numprocs=5
 [program:postgres]
 command=/usr/local/bin/postgres-wrapper.sh
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:redis]
 command=/usr/local/bin/redis-wrapper.sh
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:nuxt-backend]
 command=/usr/local/bin/nuxt-wrapper.sh
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-
