#365 Switch to using relative urls

--- a/client/.env.docker
+++ b/client/.env.docker
@@ -1,6 +1,6 @@
 NUXT_LOG_LEVEL=
-NUXT_PUBLIC_APP_URL=http://localhost/
-NUXT_PUBLIC_API_BASE=http://localhost/api
+NUXT_PUBLIC_APP_URL=/
+NUXT_PUBLIC_API_BASE=/api
 NUXT_PRIVATE_API_BASE=http://localhost/api
 NUXT_PUBLIC_AI_FEATURES_ENABLED=false
 NUXT_PUBLIC_AMPLITUDE_CODE=
