--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "codemirror": "^6.0.1",
     "crisp-sdk-web": "^1.0.21",
     "date-fns": "^2.30.0",
+    "debounce": "^1.2.1",
     "fuse.js": "^6.4.6",
     "js-sha256": "^0.10.0",
     "libphonenumber-js": "^1.10.44",
