--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "aws/aws-sdk-php": "^3.183",
     "doctrine/dbal": "^3.4",
     "giggsey/libphonenumber-for-php": "^8.13",
+    "google/apiclient": "^2.15.0",
     "guzzlehttp/guzzle": "^7.0.1",
     "jhumanj/laravel-model-stats": "^0.4.0",
     "laravel/cashier": "^13.4",
