--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "openai-php/client": "^0.6.4",
     "propaganistas/laravel-disposable-email": "^2.2",
     "sentry/sentry-laravel": "^2.11.0",
+    "spatie/laravel-data": "^3.12",
     "spatie/laravel-sitemap": "^6.0",
     "spatie/laravel-sluggable": "^3.0",
     "stevebauman/purify": "^v6.2.0",
