Set new `ENV` variables

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,16 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+APP_TIMEZONE=UTC
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
+APP_MAINTENANCE_DRIVER=file
+APP_MAINTENANCE_STORE=database
+BCRYPT_ROUNDS=12
+
 LOG_CHANNEL=stack
+LOG_STACK=single
 LOG_LEVEL=debug
 
 FRONT_URL=https://localhost:3000
@@ -21,11 +30,14 @@ DB_PASSWORD=postgres
 FILESYSTEM_DRIVER=s3
 FILESYSTEM_DISK=s3
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+BROADCAST_CONNECTION=log
+CACHE_STORE=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_PATH=/
+SESSION_DOMAIN=null
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
