--- a/.env.docker
+++ b/.env.docker
@@ -18,8 +18,8 @@ DB_PASSWORD=postgres
 FILESYSTEM_DRIVER=s3
 FILESYSTEM_DISK=s3
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+BROADCAST_CONNECTION=log
+CACHE_STORE=redis
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
