Fix Laravel .env.example for hcaptcha

--- a/.env.example
+++ b/.env.example
@@ -68,7 +68,7 @@ STRIPE_TEST_DEFAULT_PRICING_MONTHLY=
 STRIPE_TEST_DEFAULT_PRICING_YEARLY=
 
 H_CAPTCHA_SITE_KEY=
-H_CAPTCHA_SECRET=
+H_CAPTCHA_SECRET_KEY=
 
 MUX_WORKSPACE_ID=
 MUX_API_TOKEN=
