Google Sheet - OAuth "client" powered integrations (#415)
* fix `helpers.php`

* fix `.eslintrc.cjs`

* spreadsheet manager

* fetch providers. set `oauth_id` for integrations

* create spreadsheet on integration create event

* connect OAuth accounts

* display actions. connect account if missing

* cleanup

* handle form field change

* map integration data object to `SpreadsheetData`

* validate request

* wip

* redirect to integrations page

* fix refresh token

* add helper text

* add extra integration info

* refactor

* refresh google token

* fix validation

* add tests

* Fix linting issue

* Update composer lock file

---------

Co-authored-by: Julien Nahum <julien@nahum.net>

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "aws/aws-sdk-php": "^3.183",
     "doctrine/dbal": "^3.4",
     "giggsey/libphonenumber-for-php": "^8.13",
+    "google/apiclient": "^2.15.0",
     "guzzlehttp/guzzle": "^7.0.1",
     "jhumanj/laravel-model-stats": "^0.4.0",
     "laravel/cashier": "^13.4",
@@ -33,6 +34,7 @@
     "openai-php/client": "^0.6.4",
     "propaganistas/laravel-disposable-email": "^2.2",
     "sentry/sentry-laravel": "^2.11.0",
+    "spatie/laravel-data": "^3.12",
     "spatie/laravel-sitemap": "^6.0",
     "spatie/laravel-sluggable": "^3.0",
     "stevebauman/purify": "^v6.2.0",
