update env variables

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ DB_PASSWORD=postgres
 FILESYSTEM_DRIVER=s3
 FILESYSTEM_DISK=s3
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+BROADCAST_CONNECTION=log
+CACHE_STORE=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
