Clean unused google api clients to reduce bundle size

--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,10 @@
       "dont-discover": [
         "laravel/dusk"
       ]
-    }
+    },
+    "google/apiclient-services": [
+      "Sheets"
+    ]
   },
   "autoload": {
     "psr-4": {
@@ -95,6 +98,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "scripts": {
+    "pre-autoload-dump": "Google\\Task\\Composer::cleanup",
     "post-autoload-dump": [
       "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
       "@php artisan package:discover --ansi"
