--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,10 @@
           "dont-discover": [
             "laravel/dusk"
           ]
-        }
+        },
+        "google/apiclient-services": [
+          "Sheets"
+        ]
       },
       "autoload": {
         "psr-4": {
@@ -87,6 +90,7 @@
       "minimum-stability": "dev",
       "prefer-stable": true,
       "scripts": {
+        "pre-autoload-dump": "Google\\Task\\Composer::cleanup",
         "post-autoload-dump": [
           "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
           "@php artisan package:discover --ansi"
