fix composer dependencies, remove  faker

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "aws/aws-sdk-php": "*",
         "doctrine/dbal": "*",
         "giggsey/libphonenumber-for-php": "*",
+        "google/apiclient": "^2.16",
         "guzzlehttp/guzzle": "*",
         "laravel/cashier": "*",
         "laravel/framework": "^11.9",
@@ -31,6 +32,7 @@
         "openai-php/client": "*",
         "propaganistas/laravel-disposable-email": "*",
         "sentry/sentry-laravel": "*",
+        "spatie/laravel-data": "^4.6",
         "spatie/laravel-sitemap": "*",
         "spatie/laravel-sluggable": "*",
         "stevebauman/purify": "*",
