--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,12 @@
   "devDependencies": {
     "@nuxt/devtools": "~1.0.0",
     "@nuxt/eslint-config": "^0.2.0",
+    "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "nuxt": "^3.9.1",
-    "nuxt-gtag": "^1.1.2",
     "nuxt-icon": "^0.6.10",
     "nuxt-simple-sitemap": "^4.2.3",
     "postcss": "^8.4.32",
