--- a/.env.example
+++ b/.env.example
@@ -80,3 +80,7 @@ OPEN_AI_API_KEY=
 
 CADDY_SECRET=
 CADDY_AUTHORIZED_IPS=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URL=http://localhost:3000/settings/connections/callback/google
