--- a/.env.example
+++ b/.env.example
@@ -53,9 +53,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-JWT_TTL=1440
-JWT_SECRET=
-
 STRIPE_KEY=
 STRIPE_SECRET=
 
@@ -84,3 +81,5 @@ CADDY_AUTHORIZED_IPS=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URL=http://localhost:3000/settings/connections/callback/google
+
+PASSPORT_PASSWORD_GRANT_CLIENT_ID=
