--- a/.env.docker
+++ b/.env.docker
@@ -50,10 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-JWT_TTL=1440
-JWT_SECRET=
-
 MUX_WORKSPACE_ID=
 MUX_API_TOKEN=
 
 OPEN_AI_API_KEY=
+
+PASSPORT_PASSWORD_GRANT_CLIENT_ID=
