--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@codemirror/lang-html": "^6.4.7",
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
+    "@iconify-json/material-symbols": "^1.1.82",
     "@nuxt/ui": "^2.15.0",
     "@pinia/nuxt": "^0.5.1",
     "@popperjs/core": "^2.11.8",
@@ -50,6 +51,7 @@
     "fuse.js": "^6.4.6",
     "js-sha256": "^0.10.0",
     "libphonenumber-js": "^1.10.44",
+    "lzutf8": "^0.6.3",
     "object-to-formdata": "^4.5.1",
     "pinia": "^2.1.7",
     "prismjs": "^1.24.1",
