--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -14,10 +14,13 @@ server {
          index index.html index.htm index.php;
 
          location / {
-            proxy_pass http://localhost:3000;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
+           proxy_http_version 1.1;
+           proxy_pass http://ui:3000;
+           proxy_set_header X-Real-IP $remote_addr;
+           proxy_set_header X-Forwarded-Host $host;
+           proxy_set_header X-Forwarded-Port $server_port;
+           proxy_set_header Upgrade $http_upgrade;
+           proxy_set_header Connection "Upgrade";
          }
 
          location /api/ {
@@ -35,11 +38,24 @@ server {
               try_files $uri $uri/ /index.php$is_args$args;
          }
 
+         location /laravel-bucket/ {
+           proxy_pass http://minio:9000;
+
+           proxy_http_version 1.1;
+           proxy_set_header X-Real-IP $remote_addr;
+           proxy_set_header X-Forwarded-Host $host;
+           proxy_set_header X-Forwarded-Port $server_port;
+           proxy_set_header Upgrade $http_upgrade;
+           proxy_set_header Connection "Upgrade";
+         }
+
          location ~ \.php$ {
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass unix:/var/run/php-fpm-opnform-site.sock;
+            fastcgi_pass api:9000;
             fastcgi_index index.php;
-            include fastcgi.conf;
+            include fastcgi_params;
+            #fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html/$fastcgi_script_name;
+            fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html/public/index.php;
             fastcgi_param REQUEST_URI $api_uri;
          }
 }
