--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -28,6 +28,11 @@ server {
               try_files $uri $uri/ /index.php$is_args$args;
          }
 
+         location /open/ {
+              set $original_uri $uri;
+              try_files $uri $uri/ /index.php$is_args$args;
+         }
+
          location /local/temp/ {
               set $original_uri $uri;
               try_files $uri $uri/ /index.php$is_args$args;
