Use local file storage

--- a/.env.docker
+++ b/.env.docker
@@ -7,8 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=errorlog
 LOG_LEVEL=debug
 
-FILESYSTEM_DRIVER=s3
-FILESYSTEM_DISK=s3
+FILESYSTEM_DRIVER=local
 
 BROADCAST_CONNECTION=log
 CACHE_STORE=redis
